--- a/landing/frontend/index.html
+++ b/landing/frontend/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/src/components/icons/IconSoge.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>Soge Webapp</title>
   </head>
   <body>
     <div id="app"></div>
